# everything_robot

./: .gitignore  LICENSE  README.md
cv/: manifest.xml
cv/src/: er_simple_object_detector_node.py  image_recorder.py
er_brain/: CMakeLists.txt  package.xml
er_brain/scripts/: er_brain.py
er_cartesian_motor_controller/: CMakeLists.txt  package.xml
er_cartesian_motor_controller/src/: cartesian_motor_controller_node.cpp
er_gripper/: CMakeLists.txt  README.md  package.xml
er_gripper/arduino_code/: gripper.ino
er_gripper/arduino_code/gripper/: gripper.ino
er_gripper/launch/: gripper.launch
er_gripper/src/: er_grab_controller.cpp  er_gripper_node.cpp  er_gripper_node_TEST-ONLY.cpp
er_launch/: CMakeLists.txt  package.xml
er_launch/launch/: milestone_1.launch  robot.launch  rosbag.launch  rrt_test.launch
er_motor_controller/: CMakeLists.txt  package.xml
er_motor_controller/src/: motor_controller_node.cpp
er_navigation/: CMakeLists.txt  package.xml
er_navigation/action/: Pathfinder.action
er_navigation/include/: er_slam_node.h  map_dilution.h  map_reader.h  occupancy_grid_utils.h  rrt_utils.h
er_navigation/src/: er_drive_node.cpp  er_dummy_path_node.cpp  er_explore_node.cpp  er_pathfinder_node.cpp  er_slam_node.cpp  grab_things.cpp  look_forward_drive.cpp  map_dilution.cpp  map_reader.cpp  occupancy_grid_utils.cpp  rrt_utils.cpp
er_perception/: CMakeLists.txt  package.xml
er_perception/include/: er_object_filter_node.h  er_obstacle_detection_node.h  er_pointcloud_to_2d_node.h
er_perception/msg/: ClassifiedBoundingBox.msg  ClassifiedImage.msg  DetailedObject.msg  DetailedObjectList.msg  Object.msg  object_location.msg
er_perception/scripts/: er_cnn_object_detector_node.py  er_object_locationer_node.py  er_simple_object_detector_node.py  er_simple_object_detector_node_2.py  image_recorder.py  simple_object_detector.py  train_cnn.py
er_perception/src/: er_object_filter_node.cpp  er_obstacle_detection_node.cpp  er_pointcloud_to_2d_node.cpp
er_planning/: CMakeLists.txt  package.xml
er_planning/action/: Path.action
er_planning/include/: rrt_utils.h
er_planning/src/: er_pathfinder_node.cpp  path_action.cpp  path_node.cpp  rrt_utils.cpp  send_odom.cpp
er_wheels/: CMakeLists.txt  package.xml
er_wheels/include/: er_wheel_odometry_node.h
er_wheels/launch/: wheel_odometry.launch
er_wheels/scripts/: er_keyboard_node.py
er_wheels/src/: er_cartesian_motor_controller_node.cpp  er_motor_controller_node.cpp  er_wheel_odometry_node.cpp
everything_robot/: CMakeLists.txt  README.md  package.xml
path_planning/: CMakeLists.txt  package.xml
path_planning/src/: .drive_node.cpp.swp  drive_node.cpp  path_node.cpp
