<?xml version="1.0"?>
<package format="2">
  <name>er_brain</name>
  <version>0.0.1</version>
  <description>This package handles includes the state machien / behavior tree / or whatever we use.</description>


  <author email="leonardb@kth.se">Leonard Bruns</author>
  <author email="fradesjo@kth.se">Fanny Radesjö</author>
  <author email="tomaszuk@kth.se">Michal Tomaszuk</author>

  <maintainer email="leonardb@kth.se">Leonard Bruns</maintainer>
  <maintainer email="fradesjo@kth.se">Fanny Radesjö</maintainer>
  <maintainer email="tomaszuk@kth.se">Michal Tomaszuk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>phidgets</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geomtry_msgs</exec_depend>


  <export>

  </export>
</package>
