<?xml version="1.0"?>
<package format="2">
  <name>er_navigation</name>
  <version>0.0.1</version>
  <description>This package performs mapping, localization and low level path planning.</description>

  <author email="leonardb@kth.se">Leonard Bruns</author>
  <author email="fradesjo@kth.se">Fanny Radesjö</author>
  <author email="gupett@kth.se">Gustav Pettersson</author>
  <author email="tomaszuk@kth.se">Michal Tomaszuk</author>

  <maintainer email="leonardb@kth.se">Leonard Bruns</maintainer>
  <maintainer email="fradesjo@kth.se">Fanny Radesjö</maintainer>
  <maintainer email="gupett@kth.se">Gustav Pettersson</maintainer>
  <maintainer email="tomaszuk@kth.se">Michal Tomaszuk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>er_planning</depend>
  <depend>pcl_ros</depend>
  <depend>actionlib</depend>
  
  <export>

  </export>
</package>
