<package>
  <name>everything_robot</name>
  <version>0.0.1</version>
  <description>
    Mega package for RAS course 2018
  </description>
  <license>MIT</license>

  <author email="leonardb@kth.se">Leonard Bruns</author>
  <author email="fradesjo@kth.se">Fanny Radesjö</author>
  <author email="gupett@kth.se">Gustav Pettersson</author>
  <author email="tomaszuk@kth.se">Michal Tomaszuk</author>

  <maintainer email="leonardb@kth.se">Leonard Bruns</maintainer>
  <maintainer email="fradesjo@kth.se">Fanny Radesjö</maintainer>
  <maintainer email="gupett@kth.se">Gustav Pettersson</maintainer>
  <maintainer email="tomaszuk@kth.se">Michal Tomaszuk</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>er_motor_controller</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
